# openscad-part-maker

./: Cargo.toml  DEVELOPMENT.md  Dockerfile  Justfile  README.md
.github/workflows/: docker.yml  release.yml  rust.yml
coverage/master/: index.html
coverage/master/coverage/home/runner/work/openscad-part-maker/openscad-part-maker/openscad-part-maker/src/: cli.rs.html  main.rs.html  server.rs.html
openscad-part-maker/: Cargo.toml  Dockerfile  Dockerfile.binary  README.md
openscad-part-maker/src/: cli.rs  main.rs  scad_params.rs  server.rs
openscad-part-maker/template/: lib.scad  tile.scad
src/: cli.rs  server.rs
template/: lib.scad
