[package]
name = "openscad-part-maker"
description = "openscad-part-maker is a CLI tool"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/enigmacurry/openscad-part-maker"
homepage = "https://github.com/enigmacurry/openscad-part-maker"
license = "MIT"
keywords = []
categories = ["command-line-utilities"]
readme = "README.md"
documentation = "https://docs.rs/openscad-part-maker"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[dependencies]
clap = "4.5.17"
clap_complete = "4.5.29"
dirs = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"

[dev-dependencies]
shell-words = "1.1.0"
